# mnhn_ia_nutrition

./: .gitignore  pyproject.toml
notebooks/: In_Silico_Screening_AMP.ipynb  image_management.ipynb  part_1_antismash.ipynb  part_2_cross_activity.ipynb
scripts/: WGS_Assembly.sh
src/mnhn_ia_nutrition/: __init__.py
