[project]
name = "mnhn-ia-nutrition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "etienneguevel", email = "etienneguev@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "sam-2",
]

[project.scripts]
mnhn-ia-nutrition = "mnhn_ia_nutrition:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
