[project]
name = "mnhn-ia-nutrition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "etienneguevel", email = "etienneguev@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "sam-2",
    "torchvision>=0.22.1",
]

[project.scripts]
mnhn-ia-nutrition = "mnhn_ia_nutrition:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
